crates/runtime/tests/ui/empty_env_prefix.stderr
error: `env_prefix` must not be empty
         help: an empty prefix would map a field named `path` to the ambient `PATH`
 --> tests/ui/empty_env_prefix.rs:5:24
  |
5 | #[layered(env_prefix = "")]
  |                        ^^
